<?xml version="1.0"?>
<package format="2">
  <name>scenario_module</name>
  <version>0.0.0</version>
  <description>Module that implements scenario optimization for LMPCC</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="r2c1@todo.todo">r2c1</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>ros_tools</depend>
  <depend>mpc_planner_types</depend>
  <depend>mpc_planner_msgs</depend>
  <depend>mpc_planner_util</depend>
  <depend>mpc_planner_solver</depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>

</package>
